@@ -1,3 +1,6 @@
+2012-01-16  Kirit Saelensminde  <kirit@felspar.com>
+ The server side conversion to JSON compatible Python objects now includes the request so that, for example, URIs can be handled correctly.
+
 2012-01-12  Kirit Saelensminde  <kirit@felspar.com>
  Renamed the slumber_test folder to slumber_examples.
  Added the beginnings of the server side configuration by allowing model properties to be exposed.
